--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,6 +3,8 @@
   // justify-content: space-between;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  border-top: solid;
   flex-wrap: wrap;
   margin: 0 0 60px;
   a{
