--- a/app/assets/stylesheets/components/_mapbox.scss
+++ b/app/assets/stylesheets/components/_mapbox.scss
@@ -1,6 +1,6 @@
-.mapbox-container {
-  display: flex;
-  align-items: center;
+.map {
+  height: 100vh;
+  border-top: solid;
 }
 
 .mapboxgl-popup {
