--- a/app/views/shared/_mapbox.html.erb
+++ b/app/views/shared/_mapbox.html.erb
@@ -1,5 +1,4 @@
-
-<div class="container">
+<div class="container map">
   <% if current_user.present? %>
   <p style="color: white; font-size: 48px">Where are my items?</p>
   <div style="width: auto; height: 400px; margin: auto; border-radius: 5px; box-shadow: 0 0 15px rgba(0,0,0,0.2);"
