--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -156,7 +156,7 @@
     width: 360px;
     margin:20px 0 20px;
     border-radius: 5px;
-    background-color: $lending;
+    background-color: $borrowing;
     position: relative;
     .card-borrowing{
       .loan-card-image{
