--- a/app/views/loans/borrowers.html.erb
+++ b/app/views/loans/borrowers.html.erb
@@ -1,30 +1,28 @@
+
+<% @user = User.find_by(id: 16) %>
 <div class="loan-index" data-controller='modal'>
-  <% lendings = user_lendings(current_user) %>
+  <% lendings = user_lendings(User.find_by(id: 16)) %>
   <% lendings.each do |loan| %>
+    <% count = 0 %>
     <% unless loan.status == 'returned' %>
-      <% if loan.id % 2 == 0  %>
-        <div class="card-even">
-          <%= render '/shared/card_lending', loan: loan %>
-        </div>
-      <% else %>
-        <div class="card-odd">
-          <%= render '/shared/card_lending', loan: loan %>
-        </div>
+      <% count += 1 %>
+        <% if count % 2 == 0  %>
+          <div class="card-even-lending">
+            <%= render '/shared/card_lending', loan: loan %>
+            <div class='chatbox'>
+              <% @chatroom = Chatroom.find(loan.chatroom_id) %>
+              <%= render 'chatrooms/show', chatroom: @chatroom, message: @message, user: @user %>
+            </div>
+          </div>
+        <% else %>
+          <div class="card-odd-lending">
+            <%= render '/shared/card_lending', loan: loan %>
+            <div class='chatbox'>
+              <% @chatroom = Chatroom.find(loan.chatroom_id) %>
+              <%= render 'chatrooms/show', chatroom: @chatroom, message: @message, user: @user %>
+            </div>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
-  <% end %>
-  <% borrowings = user_borrowings(current_user) %>
-  <% borrowings.each do |loan| %>
-    <% unless loan.status == 'returned' %>
-      <% if loan.id % 2 == 0 %>
-        <div class="card-even">
-          <%= render '/shared/card_borrowing', loan: loan %>
-        </div>
-      <% else %>
-        <div class="card-odd">
-          <%= render '/shared/card_borrowing', loan: loan %>
-        </div>
-      <% end %>
-    <% end %>
   <% end %>
 </div>
