--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -1,9 +1,11 @@
 <div class="dashboard-container">
   <div class="loan-index" data-controller='modal'>
     <% lendings = user_lendings(current_user) %>
+    <% count = 0 %>
     <% lendings.each do |loan| %>
       <% unless loan.status == 'returned' %>
-        <% if loan.id % 2 == 0  %>
+      <% count += 1 %>
+        <% if count % 2 == 0  %>
           <div class="card-even-lending">
             <%= render '/shared/card_lending', loan: loan %>
           </div>
@@ -17,7 +19,8 @@
     <% borrowings = user_borrowings(current_user) %>
     <% borrowings.each do |loan| %>
       <% unless loan.status == 'returned' %>
-        <% if loan.id % 2 == 0 %>
+      <% count += 1 %>
+        <% if count % 2 == 0 %>
           <div class="card-even-borrowing">
             <%= render '/shared/card_borrowing', loan: loan %>
           </div>
