--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class= "user-show-container">
-  <h1>Your historic with: <%= @user.first_name %> <%= @user.last_name %> </h1>
+  <h1>Your historic with <%= @user.first_name %> <%= @user.last_name %> </h1>
   <div class="loan-index" data-controller='modal'>
     <% lendings = user_lendings(@user) %>
     <% lendings.each do |loan| %>
@@ -49,5 +49,18 @@
           <% end %>
         <% end %>
       <% end %>
+  </div>
+  </div>
+      <div class="review-summary">
+      <p style="color: dark; font-size: 40px;">Reviews for <%= @user.first_name %></p>
+      <ul style="list-style-type: none">
+        <% if @user.reviews.present? %>
+          <%  @user.reviews.each do |review| %>
+            <li>"<%= review.comment %>" from <%= review.loan.item.user.first_name %></li>
+          <% end %>
+        <% else %>
+          <li>The user has no reviews...</li>
+        <% end %>
+        </ul>
   </div>
 </div>
